--- a/d1/01-vue-demo.html
+++ b/d1/01-vue-demo.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!-- head 页面加载之前加载到浏览器中 -->
-    <script src="./node_modules/vue/dist/vue.js"></script>
+    <script src="/node_modules/vue/dist/vue.js"></script>
   </head>
   <body>
     <!-- body中的script页面加载完成后读取 -->
