--- a/d4/03-事件模型.html
+++ b/d4/03-事件模型.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <script>
+      // 自调用函数，返回的一个对象，对象中有多个方法
       var event = (function () {
         eventObjs = {};
         return {
@@ -39,22 +40,37 @@
               }
             }
           },
-          /** 
+          /**
            * 发射事件,触发事件,包装参数 传递给事件处理函数
-           * */ 
+           * */
           emit: function (type) {
             // Array.form
             // 获取arguments从1后的所有参数，返回的是数组
-            let args = Array.prototype.splice.call(arguments,1)
-            let _events = eventObjs[type]
-            if(!_events) return
-            for(let i = 0;i<_events.length;i++) {
-              // 如果要绑定上下文就需要使用call 或 apply
-              _events[i].apply(null,args)
+            let args = Array.prototype.splice.call(arguments, 1);
+            let _events = eventObjs[type];
+            if (!_events) return;
+            for (let i = 0; i < _events.length; i++) {
+              // 如果要绑定上下文就需要使用call 或 apply,并将参数传递给事件
+              _events[i].apply(null, args);
             }
           },
         };
       })();
+    </script>
+    <script>
+      function foo() {
+        console.log(1);
+      }
+      event.on('click',() => {console.log('111');}) // 无法移除，因为拿不到他的引用地址，在外面声明才能移除
+      event.on('click',() => {console.log('222');})
+      event.on('click',() => {console.log('333');})
+
+      event.emit('click',12345)
+      /**
+       * js中基本类型是比较值
+       * 引用类型比较的是地址
+       * 引用类型与基本类型，是将其转换为基本类型再比较，如果是===严格等于是不转换比较
+       * */ 
     </script>
   </body>
 </html>
