--- a/d5/index.html
+++ b/d5/index.html
@@ -18,13 +18,13 @@
         <li>{{interest.sing}}</li>
       </ul>
     </div>
-    <script src="./src/vnode.js"></script>
-    <script src="./src/complier.js"></script>
-    <script src="./src/initdata.js"></script>
-    <script src="./src/jgvue,.js"></script>
+    <script src="./src2/vnode.js"></script>
+    <script src="./src2/complier.js"></script>
+    <script src="./src2/initdata.js"></script>
+    <script src="./src2/jgvue.js"></script>
     <script>
       let data = {
-        name: "张三",
+        name: "张三三",
         age: 18,
         interest: {
           play: "打游戏",
