引入依赖收集与派发更新模块

--- a/d5/index.html
+++ b/d5/index.html
@@ -20,6 +20,8 @@
     </div>
     <script src="./src2/vnode.js"></script>
     <script src="./src2/complier.js"></script>
+    <script src="./src2/Dep.js"></script>
+    <script src="./src2/watcher.js"></script>
     <script src="./src2/initdata.js"></script>
     <script src="./src2/jgvue.js"></script>
     <script>
