--- a/d6/index.html
+++ b/d6/index.html
@@ -34,8 +34,9 @@
             age: 18,
             sex: "男",
           },
-          father: '王二'
-        }
+          car: "奔驰",
+          father: "王二",
+        },
       });
     </script>
   </body>
